--- a/src/main/resources/templates/admin/my-profile.html
+++ b/src/main/resources/templates/admin/my-profile.html
@@ -11,19 +11,8 @@
 <body>
 <header>
     <nav class="container container--70">
-        <ul class="nav--actions">
-            <li class="logged-user">
-                Witaj <span th:text="${userFirstName}"></span>
-                <ul class="dropdown">
-                    <li><a th:href="@{/admin/myprofile}">Profil</a></li>
-                    <li><a href="#">Zarządzaj fundacjami</a></li>
-                    <li><a href="#">Zarządzaj użytkownikami</a></li>
-                    <li><a href="#">Zarządzaj adminami</a></li>
-                    <li><a th:href="@{/logout}">Wyloguj</a></li>
-                </ul>
-            </li>
-        </ul>
-        <span th:include="fragments/header :: header"></span>
+        <span th:include="admin/fragments/loggedOrNotLogged :: loggedOrNotLogged"></span>
+        <span th:include="admin/fragments/header :: header"></span>
     </nav>
 </header>
 
